notes: fix word breaks inside links.
https://danbooru.donmai.us/forum_topics/9127?page=286#forum_post_161140

--- a/app/javascript/src/styles/specific/notes.scss
+++ b/app/javascript/src/styles/specific/notes.scss
@@ -37,6 +37,10 @@ div#note-container {
       font-size: 0.8em;
     }
 
+    a[rel*="external"] {
+      word-break: initial;
+    }
+
     .tn {
       font-size: 0.8em;
       color: var(--note-tn-color);
